updates to content

--- a/app/views/layinghens/current/eligibility/aviary/welfare.html
+++ b/app/views/layinghens/current/eligibility/aviary/welfare.html
@@ -66,8 +66,16 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The aviary system must either have welfare ramps and platforms in positions that meet the manufacturer’s recommendation for a high welfare system, or be designed for hens to move between levels without ramps and platforms.
+                    The aviary system must either:
                 </p>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                    </li>
+                    <li>
+                        be designed for hens to move between levels without ramps and platforms
+                    </li>
+                </ul>
             </div>
 
         </div>
