--- a/app/views/layinghens/current/eligibility/building/biosecurity.html
+++ b/app/views/layinghens/current/eligibility/building/biosecurity.html
@@ -42,7 +42,7 @@
                             value: 'No',
                             checked: true if data['biosecurity'] == 'No',
                             attributes: {
-                                    'data-next': '../elimination'
+                                    'data-next': 'elim-biosecurity'
                                 }
                         }
                     ]
