--- a/app/views/layinghens/current/eligibility/building/egg-store.html
+++ b/app/views/layinghens/current/eligibility/building/egg-store.html
@@ -45,7 +45,7 @@
                             value: 'No',
                             checked: true if data['egg-store'] == 'No',
                             attributes: {
-                                    'data-next': '../elimination'
+                                    'data-next': 'elim-egg-store'
                                 }
                         }
                     ]
