--- a/app/views/layinghens/current/eligibility/building/elim-changing-area.html
+++ b/app/views/layinghens/current/eligibility/building/elim-changing-area.html
@@ -15,15 +15,18 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The housing must have a biosecure changing area at each external pedestrian point with:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        changing facilities, divided by a floor-mounted physical barrier into a clean area and a dirty area
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        in the dirty area, handwashing facilities and storage for clothes and boots that you use outside of the housing
+                    </li>
+                    <li>
+                        in the clean area, a footbath and storage for clothes and boots that you use inside of the shed
                     </li>
                 </ul>
 
