--- a/app/views/layinghens/current/eligibility/building/elim-housing-density.html
+++ b/app/views/layinghens/current/eligibility/building/elim-housing-density.html
@@ -15,15 +15,14 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The maximum stocking density for multi-tier pullet housing at the age of 16 weeks is:
                 </p>
-
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        20kg per m2 of the total usable area
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        33kg per m2 of the total usable area at floor level
                     </li>
                 </ul>
 
