--- a/app/views/layinghens/current/eligibility/building/elim-items.html
+++ b/app/views/layinghens/current/eligibility/building/elim-items.html
@@ -15,15 +15,21 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The building must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        a fixed structure with a solid concrete floor
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        water-tight roof and walls
+                    </li>
+                    <li>
+                        capped roof and wall inlets and outlets
+                    </li>
+                    <li>
+                        catch trays under all chimneys and roof-mounted vents
                     </li>
                 </ul>
 
