--- a/app/views/layinghens/current/eligibility/building/elim-multi-tier-aviary.html
+++ b/app/views/layinghens/current/eligibility/building/elim-multi-tier-aviary.html
@@ -15,15 +15,24 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The rearing aviary system must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        the capacity to provide or retain friable litter while the birds are held within the system
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        an integrated manure removal belt-system
+                    </li>
+                    <li>
+                        integrated height-adjustable feed lines, nipple drinkers and platforms
+                    </li>
+                    <li>
+                        integrated and fully dimmable non-flicker LED lighting
+                    </li>
+                    <li>
+                        welfare ramps when the pullets are 14 days old
                     </li>
                 </ul>
 
