--- a/app/views/layinghens/current/eligibility/building/elim-multi-tier-step-up.html
+++ b/app/views/layinghens/current/eligibility/building/elim-multi-tier-step-up.html
@@ -15,15 +15,15 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The step-up system must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        height-adjustable tiers that may include food and water at, or before, 10 days
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        welfare ramps
                     </li>
                 </ul>
 
