--- a/app/views/layinghens/current/eligibility/building/elim-pullet-requirements.html
+++ b/app/views/layinghens/current/eligibility/building/elim-pullet-requirements.html
@@ -15,15 +15,18 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The pullet housing must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        a useable area provided over a range of bird-accessible heights from 10 days of age
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        height adjustable perches at equal to or more than 8cm per pullet
+                    </li>
+                    <li>
+                        a minimum of 50% of the floor area covered in litter
                     </li>
                 </ul>
 
