--- a/app/views/layinghens/current/eligibility/lighting/elim-features.html
+++ b/app/views/layinghens/current/eligibility/lighting/elim-features.html
@@ -15,15 +15,18 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The housing lighting system must have: 
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        the ability to provide an automatic stepped dawn and dusk lighting environment (unless this is already provided as part of an aviary lighting system)
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        an option for red light
+                    </li>
+                    <li>
+                        a fail-safe standby device in case of electrical or other failure
                     </li>
                 </ul>
 
