--- a/app/views/layinghens/current/eligibility/ventilation/air-quality.html
+++ b/app/views/layinghens/current/eligibility/ventilation/air-quality.html
@@ -54,7 +54,7 @@
                             value: 'Yes',
                             checked: true if data['ventilation-air-quality'] == 'Yes',
                             attributes: {
-                                    'data-next': '../housing/lighting'
+                                    'data-next': '../lighting/non-flicker'
                                 }
                         },
                         {
@@ -62,7 +62,7 @@
                             value: 'No',
                             checked: true if data['ventilation-air-quality'] == 'No',
                             attributes: {
-                                    'data-next': '../elimination'
+                                    'data-next': 'elim-air-quality'
                                 }
                         }
                     ]
