--- a/app/views/layinghens/current/eligibility/ventilation/air-speed.html
+++ b/app/views/layinghens/current/eligibility/ventilation/air-speed.html
@@ -42,7 +42,7 @@
                             value: 'No',
                             checked: true if data['ventilation-air-speed'] == 'No',
                             attributes: {
-                                    'data-next': '../elimination'
+                                    'data-next': 'elim-air-speed'
                                 }
                         }
                     ]
