--- a/app/views/layinghens/current/eligibility/ventilation/elim-air-quality.html
+++ b/app/views/layinghens/current/eligibility/ventilation/elim-air-quality.html
@@ -15,15 +15,15 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The ventilation must maintain air quality (at bird head height of less than 50cm) at a:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        carbon dioxide level of less than 3,000 parts per million (ppm)
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        percentage relative humidity (%rH) level of 40% to 70%
                     </li>
                 </ul>
 
