--- a/app/views/layinghens/current/eligibility/ventilation/elim-rate.html
+++ b/app/views/layinghens/current/eligibility/ventilation/elim-rate.html
@@ -14,19 +14,16 @@
 
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
-                <p>
-                    The aviary system must either:
-                </p>
-
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
-                    </li>
-                    <li>
-                        be designed for hens to move between levels without ramps and platforms
-                    </li>
-                </ul>
-
+                {% if poultryType == 'hen' %}
+                    <p>
+                        The housing ventilation must have a ventilation rate of 10,800m3 per hour per 1000 hens.
+                    </p>
+                {% else %}
+                    <p>
+                        The housing ventilation must have a ventilation rate of 9,000m3 per hour per 1000 pullets.
+                    </p>
+                {% endif %}
+               
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
                         See other grants you may be eligible for.
