--- a/app/views/layinghens/current/eligibility/aviary/elim-lighting.html
+++ b/app/views/layinghens/current/eligibility/aviary/elim-lighting.html
@@ -15,17 +15,12 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The aviary system must have an integrated LED lighting system.
                 </p>
 
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
-                    </li>
-                    <li>
-                        be designed for hens to move between levels without ramps and platforms
-                    </li>
-                </ul>
+                {{ govukInsetText ({
+                    text: 'The lighting system must have non-flicker lighting and zonal dimming to provide an automated dawn and dusk.'
+                }) }}
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
