--- a/app/views/layinghens/current/eligibility/aviary/present.html
+++ b/app/views/layinghens/current/eligibility/aviary/present.html
@@ -42,7 +42,7 @@
                             value: 'No',
                             checked: true if data['aviary-present'] == 'No',
                             attributes: {
-                                    'data-next': '../elimination'
+                                    'data-next': 'elim-present'
                                 }
                         }
                     ]
