--- a/app/views/layinghens/current/eligibility/building/elim-biosecurity.html
+++ b/app/views/layinghens/current/eligibility/building/elim-biosecurity.html
@@ -15,17 +15,8 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    All roof and wall inlets and outlets must be capped with mesh that has a spacing of 6 millimetres (mm) or less.
                 </p>
-
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
-                    </li>
-                    <li>
-                        be designed for hens to move between levels without ramps and platforms
-                    </li>
-                </ul>
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
