--- a/app/views/layinghens/current/eligibility/building/elim-insulation.html
+++ b/app/views/layinghens/current/eligibility/building/elim-insulation.html
@@ -14,18 +14,15 @@
 
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
-                <p>
-                    The aviary system must either:
-                </p>
-
-                <ul class="govuk-list govuk-list--bullet">
-                    <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
-                    </li>
-                    <li>
-                        be designed for hens to move between levels without ramps and platforms
-                    </li>
-                </ul>
+                {% if data['project-type'] == 'replace' %}
+                    <p>
+                        The housing must have full wall and roof insulation.
+                    </p>
+                {% else %}
+                    <p>
+                        The wall and roof insulation of the housing must have a U-Value of less than 0.3W/m2/°C.
+                    </p>
+                {% endif %}
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
