--- a/app/views/layinghens/current/eligibility/building/insulation.html
+++ b/app/views/layinghens/current/eligibility/building/insulation.html
@@ -47,7 +47,7 @@
                             value: 'No',
                             checked: true if data['insulation'] == 'No',
                             attributes: {
-                                    'data-next': '../elimination'
+                                    'data-next': 'elim-insulation'
                                 }
                         }
                     ]
