--- a/app/views/layinghens/current/eligibility/building/multi-tier-aviary.html
+++ b/app/views/layinghens/current/eligibility/building/multi-tier-aviary.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing have these items?
+    Will your rearing aviary system have these features?
 {% endblock %}
 
 {% block content %}
@@ -20,33 +20,36 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The building must have:
+                        The rearing aviary system must have:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
-                            a fixed structure with a solid concrete floor
+                            the capacity to provide or retain friable litter while the birds are held within the system
                         </li>
                         <li>
-                            water-tight roof and walls
+                            an integrated manure removal belt-system
                         </li>
                         <li>
-                            capped roof and wall inlets and outlets
+                            integrated height-adjustable feed lines, nipple drinkers and platforms
                         </li>
                         <li>
-                            catch trays under all chimneys and roof-mounted vents
+                            integrated and fully dimmable non-flicker LED lighting
+                        </li>
+                        <li>
+                            welfare ramps when the pullets are 14 days old
                         </li>
                     </ul>
 
                 {% endset %}
 
                 {{ govukRadios ({
-                    idPrefix: 'items',
-                    name: 'items',
+                    idPrefix: 'multi-tier-aviary',
+                    name: 'multi-tier-aviary',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' housing have these items?',
+                            text: 'Will your rearing aviary system have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -58,17 +61,17 @@
                         {
                             text: 'Yes',
                             value: 'Yes',
-                            checked: true if data['items'] == 'Yes',
+                            checked: true if data['multi-tier-aviary'] == 'Yes',
                             attributes: {
-                                    'data-next': 'biosecurity'
+                                    'data-next': '../ventilation/features'
                                 }
                         },
                         {
                             text: 'No',
                             value: 'No',
-                            checked: true if data['items'] == 'No',
+                            checked: true if data['multi-tier-aviary'] == 'No',
                             attributes: {
-                                    'data-next': 'elim-items'
+                                    'data-next': 'elim-multi-tier-aviary'
                                 }
                         }
                     ]
