--- a/app/views/layinghens/current/eligibility/building/pullet-requirements.html
+++ b/app/views/layinghens/current/eligibility/building/pullet-requirements.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing have these items?
+    Will the pullet housing have these features?
 {% endblock %}
 
 {% block content %}
@@ -20,33 +20,30 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The building must have:
+                        The pullet housing must have:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
-                            a fixed structure with a solid concrete floor
+                            a useable area provided over a range of bird-accessible heights from 10 days of age
                         </li>
                         <li>
-                            water-tight roof and walls
+                            height adjustable perches at equal to or more than 8cm per pullet
                         </li>
                         <li>
-                            capped roof and wall inlets and outlets
-                        </li>
-                        <li>
-                            catch trays under all chimneys and roof-mounted vents
+                            a minimum of 50% of the floor area covered in litter
                         </li>
                     </ul>
 
                 {% endset %}
 
                 {{ govukRadios ({
-                    idPrefix: 'items',
-                    name: 'items',
+                    idPrefix: 'pullet-requirements',
+                    name: 'pullet-requirements',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' housing have these items?',
+                            text: 'Will the pullet housing have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -60,7 +57,7 @@
                             value: 'Yes',
                             checked: true if data['items'] == 'Yes',
                             attributes: {
-                                    'data-next': 'biosecurity'
+                                    'data-next': 'multi-tier'
                                 }
                         },
                         {
@@ -68,7 +65,7 @@
                             value: 'No',
                             checked: true if data['items'] == 'No',
                             attributes: {
-                                    'data-next': 'elim-items'
+                                    'data-next': 'elim-pullet-requirements'
                                 }
                         }
                     ]
