--- a/app/views/layinghens/current/eligibility/ventilation/elim-features.html
+++ b/app/views/layinghens/current/eligibility/ventilation/elim-features.html
@@ -15,15 +15,18 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The aviary system must either:
+                    The ventilation must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        have welfare ramps and platforms in positions that meet the manufacturer's recommendation for a high welfare system
+                        a control system to automatically measure and record the daily temperature, humidity, and CO2 levels
                     </li>
                     <li>
-                        be designed for hens to move between levels without ramps and platforms
+                        an alarm system (that detects excessive high or low temperatures and system failures) with a power supply independent of mains electricity
+                    </li>
+                    <li>
+                        an emergency power supply, for example a high-capacity generator, in case of electrical or other failures
                     </li>
                 </ul>
 
